--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.apache.httpcomponents</groupId>
+     <artifactId>httpclient</artifactId>
+     <version>4.5.9</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
